--- a/frontEnd/littleLemon/littleLemon.html
+++ b/frontEnd/littleLemon/littleLemon.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title>Little Lemon</title>
+
+        <meta property="og:title" content="Our menu">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="logo.png">
+        <meta property="og:url" content="https://littlelemon">
+        <meta property="og:description" content="a restaurant">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:site_name" content="Little Lemon">
+
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
